client bubblebox no longer clipping. Button sizes and colours correct. Triangles added in and aligned. BubbleBoxes are still misaligned though.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1067,7 +1067,6 @@ a {
   flex-direction: row;
   text-align: center;
   align-items: center;
-  overflow-x: hidden;
   width: 100%;
 }
 
@@ -1085,7 +1084,6 @@ a {
 
 .clientcarousel {
   display: block;
-  overflow-x: hidden;
   width: 100%;
 }
 
@@ -1094,7 +1092,6 @@ a {
   flex-direction: row;
   text-align: center;
   align-items: center;
-  overflow-x: hidden;
   width: 100%;
   padding-top: 50px;
   padding-bottom: 50px;
@@ -1106,6 +1103,7 @@ a {
   padding: 0 40px;
 }
 .client__bubble {
+  z-index: -1;
   background-color: #333645;
   color: #ffffff;
   margin: auto;
@@ -1119,10 +1117,10 @@ a {
   bottom: 100px;
   right: -32px;
 }
-.client__bubble-link {
-  background-color: pink;
+.client__bubble-link--webdesign {
+  background-color: #926fb1;
   border-radius: 3px;
-  line-height: 50px;
+  line-height: 35px;
   color: #ffffff;
   display: inline-block;
   font-weight: 400;
@@ -1130,8 +1128,64 @@ a {
   padding: 5px 15px;
   text-decoration: none;
 }
-.client__bubble-link :hover {
+.client__bubble-link--webdesign :hover {
   text-decoration: none;
+}
+.client__bubble-link--marketing {
+  background-color: #2ecc71;
+  border-radius: 3px;
+  line-height: 35px;
+  color: #ffffff;
+  display: inline-block;
+  font-weight: 400;
+  text-transform: uppercase;
+  padding: 5px 15px;
+  text-decoration: none;
+}
+.client__bubble-link--marketing :hover {
+  text-decoration: none;
+}
+.client__bubble-link--software {
+  background-color: #67809f;
+  border-radius: 3px;
+  line-height: 35px;
+  color: #ffffff;
+  display: inline-block;
+  font-weight: 400;
+  text-transform: uppercase;
+  padding: 5px 15px;
+  text-decoration: none;
+}
+.client__bubble-link--software :hover {
+  text-decoration: none;
+}
+.client__bubble-link--it {
+  background-color: #4183d7;
+  border-radius: 3px;
+  line-height: 35px;
+  color: #ffffff;
+  display: inline-block;
+  font-weight: 400;
+  text-transform: uppercase;
+  padding: 5px 15px;
+  text-decoration: none;
+}
+.client__bubble-link--it :hover {
+  text-decoration: none;
+}
+.client__bubble-triangle {
+  position: absolute;
+  bottom: -38px;
+  left: 50%;
+  margin-left: -36px;
+}
+.client__bubble-triangle::after {
+  content: "";
+  margin: auto;
+  display: inline-block;
+  border-color: #333645 transparent transparent;
+  border-style: solid;
+  border-width: 35px 36px 0;
 }
 :hover + .client__bubblebox {
   display: block;
