--- a/scss/modules/_carousels.scss
+++ b/scss/modules/_carousels.scss
@@ -8,7 +8,7 @@
     flex-direction: row;
     text-align: center;
     align-items: center;
-    overflow-x: hidden;
+    // overflow-x: hidden;
     width: 100%;
 }
 
@@ -34,7 +34,7 @@
 
 .clientcarousel {
     display: block;
-    overflow-x: hidden;
+    // overflow-x: hidden;
     width: 100%;
 }
 
@@ -43,7 +43,7 @@
     flex-direction: row;
     text-align: center;
     align-items: center;
-    overflow-x: hidden;
+    // overflow-x: hidden;
     width: 100%;
     padding-top: 50px;
     padding-bottom: 50px;
@@ -59,7 +59,7 @@
     //overflow-x: hidden;
 
     &__bubble {
-        
+        z-index: -1;
         background-color: $dark-txt;
         color: $white;
         margin: auto;
@@ -77,12 +77,42 @@
         }
 
         &-link{
-            @include button(pink);
+            //@include button(pink);
+
+            &--webdesign {
+                @include button($service-webdesign,$lheight:35px);
+            }
+            &--marketing {
+                @include button($service-marketing,$lheight:35px);
+            }
+            &--software {
+                @include button($service-software,$lheight:35px);
+            }
+            &--it {
+                @include button($service-it,$lheight:35px);
+            }
+            
+        }
+
+        &-triangle {
+            position: absolute;
+            bottom: -38px;
+            left: 50%;
+            margin-left: -36px;
+        }
+        &-triangle::after {
+            content: "";
+            margin: auto;
+            display: inline-block;
+            border-color: #333645 transparent transparent;
+            border-style: solid;
+            border-width: 35px 36px 0;
         }
     }
 
     :hover + &__bubblebox {
         display: block;
+        
     }
 
     &__logo {
